--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,35 +1,33 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  name: MyString
   email: MyString
+  password_digest: MyString
+  name: MyString
   address: MyString
   post_code: 1
   contact: 1
+  personal_page: MyString
+  birthday: 2015-07-13
+  id_number: MyString
   presentation: MyString
-  birthday: 2015-07-10
-  nif: MyString
   habits: MyString
   experience: MyString
-  website: MyString
-  profession: 
-  area: 
-  password_digest: MyString
   type: 1
+  active: false
 
 two:
-  name: MyString
   email: MyString
+  password_digest: MyString
+  name: MyString
   address: MyString
   post_code: 1
   contact: 1
+  personal_page: MyString
+  birthday: 2015-07-13
+  id_number: MyString
   presentation: MyString
-  birthday: 2015-07-10
-  nif: MyString
   habits: MyString
   experience: MyString
-  website: MyString
-  profession: 
-  area: 
-  password_digest: MyString
   type: 1
+  active: false
