--- a/test/fixtures/professions.yml
+++ b/test/fixtures/professions.yml
@@ -1,7 +1,7 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  name: MyString
+  area_name: MyString
 
 two:
-  name: MyString
+  area_name: MyString
